--- a/BulkyBook/Areas/Customer/Views/Home/Index.cshtml
+++ b/BulkyBook/Areas/Customer/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
   @foreach (var product in Model){
     <div class="col-lg-3">
       <div class="card">
-        <a asp-action="Details" asp-route-id="@product.Id">
+        <a asp-action="Details" asp-route-productId="@product.Id">
           <img src="@product.ImageUrl" class="card-img-top rounded"/>
         </a>
         <div class="card-body">
@@ -18,7 +18,7 @@
             }
             <span class=""><b>$@product.Price.ToString("0.00")</b></span>
           </div>
-          <a asp-action="Details" asp-route-id="@product.Id" class="btn btn-primary form-control">Details</a>
+          <a asp-action="Details" asp-route-productId="@product.Id" class="btn btn-primary form-control">Details</a>
         </div>
       </div>
     </div>
