--- a/BulkyBook/Areas/Customer/Views/Cart/Details.cshtml
+++ b/BulkyBook/Areas/Customer/Views/Cart/Details.cshtml
@@ -16,37 +16,39 @@
 			</div>
 
 			<div class="card-body">
-				<input asp-for="@Model.ListCart" />
-				@foreach (var item in Model.ListCart){
+				@for (var i = 0; i < Model.ListCart.Count(); i++){
+					<input hidden asp-for="@Model.ListCart[i].ProductId" />
+					<input hidden asp-for="@Model.ListCart[i].ApplicationUserId" />
+					<input hidden asp-for="@Model.ListCart[i].Id" />
 					<div class="row">
 						<div class="d-none d-lg-block col-1 col-lg-1 text-center py-2">
-							<img src="@item.Product.ImageUrl" class="rounded" width="100%"/>
+							<img src="@Model.ListCart[i].Product.ImageUrl" class="rounded" width="100%"/>
 						</div>
 						<div class="col-6 col-lg-6">
-							<h5><strong>@item.Product.Name</strong></h5>
-							<p><small>@item.Product.Description</small></p>
+							<h5><strong>@Model.ListCart[i].Product.Name</strong></h5>
+							<p><small>@Model.ListCart[i].Product.Description</small></p>
 						</div>
 						<div class="col-5 col-lg-5">
 							<div class="d-flex justify-content-between">
 								<div class="d-flex">
 									<div class="my-auto fw-bolder">
-										@item.Product.Price.ToString("c")
+										@Model.ListCart[i].Product.Price.ToString("c")
 									</div>
 									<div class="my-auto mx-2 text-muted">
 										X
 									</div>
 									<div class="w-25">
-										<input asp-for="@item.Count" class="form-control"/>
+										<input asp-for="@Model.ListCart[i].Count" class="form-control"/>
 									</div>
 									<div class="my-auto mx-2 text-muted">
 										Subtotal
 									</div>
 									<div class="my-auto">
-										@((item.Product.Price * item.Count).ToString("c"))
+										@((Model.ListCart[i].Product.Price * Model.ListCart[i].Count).ToString("c"))
 									</div>
 								</div>
 								<div>
-									<a asp-action="Remove" asp-route-cartId="@item.Id" class="btn btn-danger">
+									<a asp-action="Remove" asp-route-cartId="@Model.ListCart[i].Id" class="btn btn-danger">
 										<i class="bi bi-trash-fill"></i>
 									</a>
 								</div>
