--- a/BulkyBook/Areas/Admin/Views/Products/Upsert.cshtml
+++ b/BulkyBook/Areas/Admin/Views/Products/Upsert.cshtml
@@ -1,6 +1,6 @@
 @model Models.ViewModels.ProductViewModel
 <form method="post" enctype="multipart/form-data">
-  <div class="container">
+  <div class="">
     <div>
       <h2>@(Model.Product.Id == 0 ? "Create" : "Update") Product</h2>
     </div>
