--- a/BulkyBook/Areas/Admin/Views/Categories/Index.cshtml
+++ b/BulkyBook/Areas/Admin/Views/Categories/Index.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<Category>
 
-<div class="container">
+<div class="">
   <div class="row pb-3">
     <div class="col-6">
       <h2>Categories</h2>
