--- a/BulkyBook/Areas/Admin/Views/Companies/Upsert.cshtml
+++ b/BulkyBook/Areas/Admin/Views/Companies/Upsert.cshtml
@@ -1,6 +1,6 @@
 @model Company
 <form method="post">
-  <div class="container">
+  <div class="">
     <div>
       <h2>@(Model.Id == 0 ? "Create" : "Update") Company</h2>
     </div>
