--- a/BulkyBook/Areas/Admin/Views/CoverTypes/Index.cshtml
+++ b/BulkyBook/Areas/Admin/Views/CoverTypes/Index.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<CoverType>
 
-<div class="container">
+<div class="">
   <div class="row pb-3">
     <div class="col-6">
       <h2>Cover Types</h2>
