--- a/BulkyBook/Areas/Customer/Views/Cart/Details.cshtml
+++ b/BulkyBook/Areas/Customer/Views/Cart/Details.cshtml
@@ -4,9 +4,9 @@
 	<div class="">
 		<div class="card">
 			<div class="card-header bg-dark text-light ml-0">
-				<div class="row">
-					<div class="col-6">
-						<i class="fa fa-shopping-cart"></i>
+				<div class="row d-flex">
+					<div class="col-6 h3 my-auto">
+						<i class="bi bi-cart"></i>
 						Shopping Cart
 					</div>
 					<div class="col-6 text-end">
@@ -60,13 +60,13 @@
 				<div class="row">
 					<div class="col-12 col-md-6 offset-md-6 col-lg-4 offset-lg-8">
 						<div class="text-right mb-3">
-							<input type="submit" value="Update Cart" class="btn btn-success"/>
+							<input type="submit" value="Update Cart" class="btn btn-outline-success"/>
 						</div>
 
 						<ul class="list-group">
 							<li class="list-group-item d-flex justify-content-between bg-light">
 								<span class="text-info"> Total (USD)</span>
-								<strong class="text-info">@Model.Total.ToString("c")</strong>
+								<strong class="text-info">@Model.OrderHeader.OrderTotal.ToString("c")</strong>
 							</li>
 						</ul>
 					</div>
@@ -75,9 +75,9 @@
 			</div>
 
 			<div class="card-footer">
-				<div class="card-footer row">
+				<div class="row">
 					<div class="col-sm-12 col-lg-4 col-md-6 offset-lg-8 offset-md-6">
-						@* <a asp-action="Summary" class="btn btn-success form-control">Summary</a> *@
+						<a asp-action="Summary" class="btn btn-warning form-control">Summary</a>
 					</div>
 				</div>
 			</div>
