--- a/BulkyBook/Views/Shared/_Navbar.cshtml
+++ b/BulkyBook/Views/Shared/_Navbar.cshtml
@@ -33,7 +33,7 @@
       <partial name="_LoginPartial"/>
       <div class="nav-item">
         <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Details">
-          <i class="bi bi-cart"></i> HMM
+          <i class="bi bi-cart"></i>
         </a>
       </div>
     </div>
