--- a/BulkyBook/Areas/Customer/Views/Cart/Details.cshtml
+++ b/BulkyBook/Areas/Customer/Views/Cart/Details.cshtml
@@ -6,11 +6,11 @@
 			<div class="card-header bg-dark text-light ml-0">
 				<div class="row d-flex">
 					<div class="col-6 h3 my-auto">
-						<i class="bi bi-cart"></i>
+						<i class="bi b-bag"></i>
 						Shopping Cart
 					</div>
 					<div class="col-6 text-end">
-						<a asp-area="Customer" asp-controller="Home" asp-action="Index" class="btn btn-outline-info btn-sm">Continue Shopping</a>
+						<a asp-area="Customer" asp-controller="Home" asp-action="Index" class="btn btn-outline-light btn-sm">Continue Shopping</a>
 					</div>
 				</div>
 			</div>
