--- a/BulkyBook/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/BulkyBook/Areas/Customer/Views/Cart/Summary.cshtml
@@ -6,11 +6,11 @@
 			<div class="card-header bg-dark text-light ml-0">
 				<div class="row d-flex">
 					<div class="col-6 h3 my-auto">
-						<i class="bi bi-cart"></i> &nbsp;
+						<i class="bi bi-bag"></i>
 						Order Summary
 					</div>
 					<div class="col-6 text-end">
-						<a asp-action="Details" class="btn btn-outline-info btn-sm">Back to Cart</a>
+						<a asp-action="Details" class="btn btn-outline-light btn-sm">Back to Cart</a>
 					</div>
 				</div>
 			</div>
