--- a/BulkyBook/Views/Shared/_Navbar.cshtml
+++ b/BulkyBook/Views/Shared/_Navbar.cshtml
@@ -20,6 +20,7 @@
               <a class="dropdown-item" asp-area="Admin" asp-controller="CoverTypes" asp-action="Index">CoverTypes</a>
               <a class="dropdown-item" asp-area="Admin" asp-controller="Products" asp-action="Index">Products</a>
               <a class="dropdown-item" asp-area="Admin" asp-controller="Companies" asp-action="Index">Companies</a>
+              <a class="dropdown-item" asp-area="Admin" asp-controller="Orders" asp-action="Index">Orders</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Separated link</a>
             </div>
@@ -31,11 +32,13 @@
         @* </form> *@
       </div>
       <partial name="_LoginPartial"/>
-      <div class="nav-item">
-        <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Details">
-          <i class="bi bi-cart"></i>
-        </a>
-      </div>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Details">
+            <i class="bi bi-bag"></i>
+          </a>
+        </li>
+      </ul>
     </div>
   </nav>
 </header>
