--- a/BulkyBook/wwwroot/css/bootswatchtheme.css
+++ b/BulkyBook/wwwroot/css/bootswatchtheme.css
@@ -3122,7 +3122,7 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: transparent;
   --bs-btn-box-shadow: none;
   --bs-btn-focus-shadow-rgb: 60, 60, 60;
-  text-decoration: underline;
+  text-decoration: none;
 }
 .btn-link:focus-visible {
   color: var(--bs-btn-color);
